# yt-shorts-factory

./: .gitignore  CAPABILITIES.md  LICENSE  README.md  RESEARCH.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: install.bat  install.ps1  install.sh  run.bat
src/yt_shorts_factory/: __init__.py  cli.py  config.py  pipeline.py
src/yt_shorts_factory/assets/: __init__.py  asmr.py  gameplay.py  music.py  sfx.py
src/yt_shorts_factory/niche/: __init__.py  profiles.py
src/yt_shorts_factory/render/: __init__.py  composer.py  subtitles.py
src/yt_shorts_factory/script/: __init__.py  cleaner.py  gender.py  hook.py
src/yt_shorts_factory/sources/: __init__.py  dedup.py  reddit.py
src/yt_shorts_factory/transcribe/: __init__.py  whisper.py
src/yt_shorts_factory/tts/: __init__.py  edge.py  kokoro.py
tests/: test_cleaner.py  test_composer.py  test_gameplay.py  test_hook.py  test_niche.py  test_pipeline.py  test_reddit.py  test_sfx.py  test_subtitles.py
