[project]
name = "yt-shorts-factory"
version = "0.1.0"
description = "Fully-automated YouTube Shorts factory: Reddit story -> TTS -> Whisper word-timed subtitles -> gameplay B-roll -> 1080x1920 mp4."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "yt-shorts-factory contributors" }]
dependencies = [
    "httpx>=0.27",
    "edge-tts>=6.1.10",
    "faster-whisper>=1.0.3",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "yt-dlp>=2024.7.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.23",
]
# Opt-in: local high-quality TTS via Kokoro-82M.
# Install with: pip install -e ".[kokoro]"  then `yt-shorts-factory download-tts-models`.
kokoro = [
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12",
]

[project.scripts]
yt-shorts-factory = "yt_shorts_factory.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
